button complete #2 fix layout  distortion in ie8

--- a/css/main.css
+++ b/css/main.css
@@ -59,7 +59,7 @@ div#content div.reply{
     height: 180px;
     width: 100%;
     margin-bottom: 10px;
-    border: 2px solid white;
+    border: 1px solid white;
 
 }
 
