--- a/css/style1.css
+++ b/css/style1.css
@@ -4,7 +4,7 @@ body{
     margin:0;
     padding:0;
     overflow-x: hidden;
-    background-color: rgb(240,240,240);
+    background-color: rgb(225,225,225);
 
 }
 
@@ -54,23 +54,29 @@ div#top_menu{
     float: left;
     height: 45px;
     width: 100%;
-    background-color: rgb(240,240,240);
+    background-color:  rgb(240,240,240);;
     position: relative;
+    border-bottom: .5px solid rgb(195,195,195);
+
+}
+
+a.button_navi{
+
+    text-decoration: none;
 
 }
 
 div#top_menu div.button{
 
     float: left;
-    border: 0;
+    margin-right:3px;
     color: rgb(85,85,85);
     background-color: transparent;
-    margin: auto;
     text-align: center;
     font-size: 16px;
-    height: 100%;
-    width: 150px;
-    text-align: center;
+    height: 90%;
+    width: auto;
+    padding:0 30px 0 30px;
     vertical-align: middle;
     line-height: 40px;
 
@@ -79,9 +85,6 @@ div#top_menu div.button{
 div#top_menu div.button:hover{
 
     background-color: rgb(245,245,245);
-    box-sizing:border-box;
-    -moz-box-sizing:border-box;
-    -webkit-box-sizing:border-box;
-    border-bottom: 6px solid gold;
+    border-bottom:4px solid gold;
 
 }
